--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pcenum
 Type: Package
-Version: 1.0
-Date: 2011-08-01
+Version: 1.0.1
+Date: 2012-12-10
 Title: Permutations and Combinations Enumeration
 Author: Benjamin Auder
 Maintainer: Benjamin Auder <Benjamin.Auder@gmail.com>
@@ -11,6 +11,6 @@ Description: Provide methods to iterate through all
         overflow)
 License: GPL (>= 3)
 LazyLoad: yes
+Packaged: 2012-12-10 13:02:50 UTC; auder
 Repository: CRAN
-Date/Publication: 2012-10-29 08:59:24
-Packaged: 2012-10-29 08:59:24 UTC; ripley
+Date/Publication: 2012-12-10 14:21:18
